# it-edit-3.0

./: README.rst
it-edit-3.0/: CONTRIBUTORS  ChangeLog  Makefile.am  Makefile.in  Makefile.mk  NEWS  README  THANKS  config.h.in  configure  configure.ac
it-edit-3.0/data/: Makefile.am  Makefile.in
it-edit-3.0/data/Notice/: .buildinfo  Editor.html  Files.html  Menu.html  Mini-multipurpose-editor.html  Sessions.html  Shortcuts_memo.html  Spell-check.html  Terminals.html  charset.html  genindex.html  index.html  it-edit_presentation.html  it-edit_widgets.html  languages.html  objects.inv  search.html
it-edit-3.0/data/Notice/_sources/: Editor.txt  Files.txt  Menu.txt  Mini-multipurpose-editor.txt  Sessions.txt  Shortcuts_memo.txt  Spell-check.txt  Terminals.txt  charset.txt  index.txt  it-edit_presentation.txt  it-edit_widgets.txt  languages.txt
it-edit-3.0/desktop/: Makefile.am  Makefile.in
it-edit-3.0/doc/: Makefile.am  Makefile.in  it-edit.html
it-edit-3.0/man/: Makefile.am  Makefile.in  it-edit.1
it-edit-3.0/src/: Makefile.am  Makefile.in  main.c  main.h
it-edit-3.0/src/Callbacks/: configuration_callbacks.c  configuration_callbacks.h  edition_callbacks.c  edition_callbacks.h  editor_callbacks.c  editor_callbacks.h  files_callbacks.c  files_callbacks.h  gui_callbacks.c  gui_callbacks.h  highlight_selection_callbacks.c  highlight_selection_callbacks.h  search_settings_callbacks.c  search_settings_callbacks.h  terminals_callbacks.c  terminals_callbacks.h
it-edit-3.0/src/Configuration/: configuration.c  configuration.h
it-edit-3.0/src/DEBUG/: debug_search_by_signals.c  debug_search_by_signals.h
it-edit-3.0/src/Editor/: editor.c  editor.h
it-edit-3.0/src/FilesIO/: files_saver.c  files_saver.h
it-edit-3.0/src/GUI/configure/: configuration_dialog.c  configuration_dialog.h  configure_gui_elements.c  configure_gui_elements.h
it-edit-3.0/src/GUI/dialogs/: dialogs.c  dialogs.h  message_dialog.c  message_dialog.h
it-edit-3.0/src/GUI/setup/: setup_gui.c  setup_gui.h
it-edit-3.0/src/Headers/: defines.h  global_vars.c  global_vars.h  includes.h
it-edit-3.0/src/Headers/Structures/: GUI_structures.h  editor_structures.h  setting_structure.h
it-edit-3.0/src/Types/: GtkItTerm.c  GtkItTerm.h  GtkSmartIconButton.c  GtkSmartIconButton.h  GtkSmartMenuItem.c  GtkSmartMenuItem.h
it-edit-3.0/src/Types/Enjoy-Using/: GtkSmartTooltip.c  GtkSmartTooltip.h
it-edit-3.0/texi/: Makefile.am  Makefile.in  it-edit.info  it-edit.texi
