# fdl (C) 2015-2017 Brüggemann Eddie.
# Permission is granted to copy, distribute and/or modify this document
# under the terms of the GNU Free Documentation License, Version 1.3
# or any later version published by the Free Software Foundation;
# with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
# A copy of the license is included in the section entitled "GNU
# Free Documentation License".

nobase_dist_pkgdata_DATA =  ./Icons/64x64/mimetypes/*.png       \
                            ./Icons/22x22/*.png                 \
                            ./Icons/*.png                       \
                            ./Icons/16x16/*.png                 \
                            ./Icons/16x16/*.svg                 \
                            ./Icons/16x16/mimetypes/*.png       \
                            ./Icons/16x16/*.png                 \
                            ./License/*.txt                     \
                            ./License/*.html                    \
                            ./Notice/*.html                     \
                            ./Notice/.nojekyll                  \
                            ./Notice/_sources/*.txt             \
                            ./Notice/*.inv                      \
                            ./Notice/_static/*.css              \
                            ./Notice/_static/*.png              \
                            ./Notice/_static/*.js               \
                            ./Notice/_static/*.gif              \
                            ./Notice/.buildinfo                 \
                            ./Styles/*.xml                      \
                            ./Styles/*.rng                      \
                            ./Styles/*.sh   

